--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- This part is the biography, which show our personal information -->
       <div class="biography" id="biographyy">
         <div class="left">
-          <img src="D:\UTM Degree\SEM 4\WP\teonglee_personal_landing_website\images\Hadi_photo.jpg" alt="">
+          <img src="D:\UTM Degree\SEM 4\WP\hadi_personal_website\images\Hadi_photo.jpg" alt="">
         </div>
         <div class="right">
           <h2 id="biography">Biography</h2>
